<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/MainLayout"
	android:screenOrientation="portrait"
	android:configChanges="keyboardHidden|orientation|screenSize"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainMenu" >
    
    <LinearLayout 
        android:layout_width="fill_parent"
    	android:layout_height="fill_parent"
    	android:orientation="vertical" >
    	
        <TextView
	        android:id="@+id/Title"
	    	style="@style/TitleFont"
	    	android:text="@string/title" />
    	
        <TextView
        	android:id="@+id/Instruction1"
	    	style="@style/InstructionFont"
	    	android:text="@string/instruction1" />
	    
	    <TextView
	        android:id="@+id/Pick_robot"
	    	style="@style/NormalFont"
	    	android:text="@string/pick_robot" />
	   
	    <Spinner
	        android:id="@+id/Spinner_robot"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
        	android:prompt="@string/robot_prompt"/>
	    
	    <TextView
	        android:id="@+id/Pick_camera"
	    	style="@style/NormalFont"
	    	android:text="@string/pick_camera" />
	    
	    <Spinner
	        android:id="@+id/Spinner_camera"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
        	android:prompt="@string/camera_prompt"/>
	    
	    <TextView
        	android:id="@+id/Instruction2"
	    	style="@style/InstructionFont"
	    	android:text="@string/instruction2" />
	    
		<Button
	        android:id="@+id/Button_calibrate"
	        android:text="@string/calibrate"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content" />
    
    </LinearLayout>
    
    <Button
        android:id="@+id/Button_start"
        android:text="@string/run"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" />
    
</RelativeLayout>