<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/CalibrationLayout"
    android:screenOrientation="landscape"
	android:configChanges="keyboardHidden|orientation|screenSize"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >
    
    <LinearLayout 
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="vertical" 
    	android:layout_alignParentTop="true" >
    	
        <TextView
	        style="@style/TitleFont"
	        android:layout_height="wrap_content"
	        android:text="@string/calibration_title" />

	    <TextView
	        style="@style/AdditionalFont"
	        android:gravity="center"
	        android:text="@string/calibration_tip" />
    
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="vertical" 
    	android:layout_centerVertical="true" >
	    
		<TextView
		   style="@style/NormalFont"
		   android:text="@string/calibration_instruction" />
	
		<Button
		    android:id="@+id/Do_calibration"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/calibrate" />
		
	</LinearLayout>
	
    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:stretchColumns="*" >
		
        <TableRow android:id="@+id/CurrentRow">
			<TextView
				style="@style/AdditionalFont"
				android:layout_gravity="right"
				android:text="@string/calibration_current"
				android:paddingRight="@dimen/tableRow_padding" />
		
			<TextView
			    android:id="@+id/current_value"
				style="@style/KeywordFont"
				android:text="@string/none" 
				android:layout_gravity="left"
				android:paddingLeft="@dimen/tableRow_padding" />
		</TableRow>
		
		<TableRow android:id="@+id/MaxRow">
			<TextView
			   style="@style/AdditionalFont"
			   android:text="@string/calibration_max"
			   android:layout_gravity="right"
			   android:paddingRight="@dimen/tableRow_padding" />
		
			<TextView
			   android:id="@+id/max_value" 
			   style="@style/KeywordFont"
			   android:text="@string/none" 
			   android:layout_gravity="left"
			   android:paddingLeft="@dimen/tableRow_padding" />
		</TableRow>
			
	</TableLayout>
    
    
</RelativeLayout>